# dotfiles

./: .aliases  .bash_profile  .bash_prompt  .bashrc  .brew  .color.py  .emacs  .exports  .functions  .git-completion.bash  .gitattributes  .gitconfig  .gitignore  .path  .tmux.conf.local  .vscode.keybindings.json  .vscode.settings.json  .vscode.snippets.python.json  .zshrc  Brewfile  README.md  bootstrap.sh  brew-packages.txt  homebrew.sh  init.sh  init_osx.sh  install-zsh-ubuntu.sh  setup-zsh.sh  uv-python-symlink.sh
.config/fish/: abbr.fish  config.fish  functions.fish  prompt.fish
.config/fish/functions/: fish_right_prompt.fish  send_system_notification.fish  venv.fish
.config/nvim/: init.vim
.config/zsh/: alias.zsh  prompt.zsh  statusemoji.zsh  venv.zsh
.cspell/: dictionary.txt
.emacs.d/: auto-complete-config.elc  auto-complete.elc  fuzzy.elc  popup.elc
.emacs.d/auto-save-list/: .saves-17319-Daniels-MacBook-Pro.local~
.ssh/: config
ashutdown/: ashutdown  install.sh
cursor/: settings.json
git/hooks/: pre-push
iterm2/: keymap.json
vm/: .flake8  pyproject.toml  requirements.txt  tui.py  vm.py
vscode/: keybindings.json  settings.json
vscode/snippets/: python.json
